<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <EditText
            android:hint="@string/name"
            style="@style/customEditText"/>
        <EditText
            android:hint="@string/id"
            style="@style/customEditText"/>
        <EditText
            android:hint="@string/dob"
            style="@style/customEditText"/>
        <EditText
            android:hint="@string/blood_group"
            style="@style/customEditText"/>
        <EditText
            android:hint="@string/phone_number"
            style="@style/customEditText"/>
        <EditText
            android:hint="@string/state"
            style="@style/customEditText"/>
        <EditText
            android:hint="@string/district"
            style="@style/customEditText"/>
        <EditText
            android:hint="@string/address"
            style="@style/customEditText"/>
    </LinearLayout>

</ScrollView>